# MachineLearningAnalytics

./: .replit  README.md  app.py  config.py  pyproject.toml  simple_app.py
attached_assets/: BIG DATA GENERATED DATASET USED FOR ML.csv  Pasted--W-A-R-P-Project-Description-Enhanced-for-Enterprise-Scale-Academic-Deployment-W-A-R-P-is-a-robu-1746543258820.txt
modules/: __init__.py  classification_models.py  clustering_models.py  collaborative_filtering.py  data_cleaning.py  data_ingestion.py  eda.py  experiment_tracking.py  feature_engineering.py  feature_selection.py  model_evaluation.py  model_tuning.py  pattern_mining.py  regression_models.py
utils/: __init__.py  data_loader.py  spark_utils.py
visualization/: __init__.py  dashboard.py  plot_utils.py
