[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "delta-spark>=3.3.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyspark>=3.5.5",
    "streamlit>=1.45.0",
    "visualization>=1.0.0",
]
